Sans serif för pad-versionen

--- a/body.tex
+++ b/body.tex
@@ -50,7 +50,8 @@ Som suffix används följande:
 \begin{tabular}{ll}
 	/M  & Mobil (rörlig) sändaramatör, även portabel \\
 	/MM & Mobil till sjöss (mobil maritime)          \\
-	/AE & Mobil i luften (aeromobile)                \\
+	/AM & Mobil i luften (aeromobile)                \\
+	/PM & Mobil portabel (ej officiellt suffix)\\
 	/R  & Repeaterstation
 \end{tabular}
 
@@ -349,6 +350,7 @@ Rekommendationer för repeatrar i olika distrikt och län att använda CTCSS fö
 
 \begin{longtable}{lcccc}
 	\textbf{Område} & \textbf{Primär} & \textbf{Sek. 1} & \textbf{Sek. 2} & \textbf{Sek. 3} \\ \hline
+	\endhead
 	Distrikt 0      &      77,0       &      123.0      &      67.0       &      100.0      \\
 	Distrikt 1      &      218.1      &      233.6      &                 &  \\
 	Distrikt 2      &      107.2      &      146.2      &      162.2      &      186.2      \\
@@ -366,6 +368,7 @@ Rekommendationer för repeatrar i olika distrikt och län att använda CTCSS fö
 \footnotesize
 \begin{longtable}{llllrrlcl}
 	\textbf{Funktion} & \textbf{Typ} & \textbf{Call} & \textbf{QTH} & \textbf{Frekvens} & \textbf{Skift} & \textbf{Access} & \textbf{Status} & \textbf{Locator} \\ \hline
+	\endhead
 	Repeater          & FM           & SMØWIU/R      & Botkyrka     &          434.8750 &          -2MHz & 77,0Hz         &       QRV       & JO89WF           \\
 	Repeater          & FM           & SAØAZT/R      & Brottby      &          434.8000 &          -2MHz & 1750/77 Hz$^1$  &       QRV       & JO99DA           \\
 	Repeater          & FM           & SMØRDZ        & Brottby      &          145.6500 &        -600kHz & 1750         &       QRV       & JO99DN           \\
@@ -394,7 +397,6 @@ Rekommendationer för repeatrar i olika distrikt och län att använda CTCSS fö
 	Repeater          & FM           & SMØWAJ/R      & Skärholmen   &          434.9250 &        +1,6MHz & Carrier         &       QRV       & JO89WG           \\
 	Repeater          & FM           & SMØHGS/R      & Skärholmen   &          145.7250 &        -600kHz & 77,0 Hz         &       QRV       & JO89WG           \\
 	Repeater          & FM           & SMØWHP        & Sollentuna   &          434.6000 &          -2MHz & 1750 Hz         &       QRV       & JO89XL           \\
-	\textbf{Funktion} & \textbf{Typ} & \textbf{Call} & \textbf{QTH} & \textbf{Frekvens} & \textbf{Skift} & \textbf{Access} & \textbf{Status} & \textbf{Locator} \\ \hline
 	Repeater          & FM           & SKØCT/R       & Solna        &          434.9500 &          -2MHz & 77,0 Hz         &       QRV       & JO89XJ           \\
 	Repeater          & FM           & SKØZA/R       & Solna        &          434.8500 &          -2MHz & 123,0 Hz        &       QRV       & JO89XI           \\
 	Repeater          & FM           & SMØOFV/R      & Solna        &          145.7625 &        -600kHz & 123,0 Hz        &       QRV       & JO99AI           \\
@@ -435,6 +437,7 @@ Repeater          & FM           & SKØCT/R       & Solna        &           29.
 \footnotesize
 \begin{longtable}{llllrrlcl}
 \textbf{Funktion} & \textbf{Typ} & \textbf{Call} & \textbf{QTH} & \textbf{Frekvens} & \textbf{Skift} & \textbf{Access} & \textbf{Status} & \textbf{Locator} \\ \hline
+\endhead
 Repeater&	FM/C4FM&	SK1BL/R	&Endre	&145.7750	&-600kHz	&1750	&QRV	&JO97FO\\
 \end{longtable}
 %\begin{itemize}
@@ -446,6 +449,7 @@ Repeater&	FM/C4FM&	SK1BL/R	&Endre	&145.7750	&-600kHz	&1750	&QRV	&JO97FO\\
 \footnotesize
 \begin{longtable}{llllrrlcl}
 	\textbf{Funktion} & \textbf{Typ} & \textbf{Call} & \textbf{QTH}       & \textbf{Frekvens} & \textbf{Skift} & \textbf{Access}  & \textbf{Status} & \textbf{Locator} \\ \hline
+	\endhead
 	Repeater          & FM           & SK2AU/R       & Arjeplog           &          145.7000 &        -600kHz & 1750             &       QRV       & JP86XC           \\
 	Repeater          & FM           & SM2TBQ/R      & Fatmomakke         &           145.675 &        -600kHz & 88,5Hz           &       QRV       & JP75NC           \\
 	Repeater          & FM           & SK2TP/R       & Gällivare/Malmb.   &          145.6500 &        -600kHz & 1750             &       QRV       & KP07HC           \\
@@ -471,7 +475,6 @@ Repeater&	FM/C4FM&	SK1BL/R	&Endre	&145.7750	&-600kHz	&1750	&QRV	&JO97FO\\
 	Repeater          & FM           & SK2AU/R       & Skellefteå         &          434.7000 &          -2MHz & 1750             &       QRV       & KP05LS           \\
 	Repeater          & D-Star       & SK2RFV        & Skellefteå         &          434.5250 &          -2MHz & DV Carrier       &      Plan       & KP04LS           \\
 	Repeater          & FM           & SK2RMD        & Sorsele            &          145.6000 &        -600kHz & 1750             &       QRV       & JP85SM           \\
-		\textbf{Funktion} & \textbf{Typ} & \textbf{Call} & \textbf{QTH}       & \textbf{Frekvens} & \textbf{Skift} & \textbf{Access}  & \textbf{Status} & \textbf{Locator} \\ \hline
 	Repeater          & FM           & SK2RMR        & Storuman           &          145.7250 &        -600kHz & 1750             &       QRV       & JP85NC           \\
 	Repeater          & FM           & SM2NLD/R      & Storuman           &          434.7500 &        -1,6MHz & 1750             &       QRV       & JP85NC           \\
 	Repeater          & FM           & SK2RLF        & Tärnaby            &          145.6250 &        -600kHz & 1750             &       QRV       & JP75PR           \\
@@ -495,6 +498,7 @@ Repeater&	FM/C4FM&	SK1BL/R	&Endre	&145.7750	&-600kHz	&1750	&QRV	&JO97FO\\
 \footnotesize
 \begin{longtable}{llllrrlcl}
 	\textbf{Funktion} & \textbf{Typ} & \textbf{Call} & \textbf{QTH}     & \textbf{Frekvens} & \textbf{Skift} & \textbf{Access} & \textbf{Status} & \textbf{Locator} \\ \hline
+	\endhead
 	Repeater          & FM           & SK3KH/R       & Alfta            &          145.6000 &        -600KHz & 127,3Hz         &       QRV       & JP71XF           \\
 	Repeater          & D-Star       & SK3KH         & Alfta            &          434.5500 &          -2MHz & DV Carrier      &       QRV       & JP71XE           \\
 	Repeater          & FM           & SK3RMG        & Bergsjö          &          145.7125 &        -600KHz & 1750            &       QRV       & JP81MX           \\
@@ -507,9 +511,7 @@ Repeater&	FM/C4FM&	SK1BL/R	&Endre	&145.7750	&-600kHz	&1750	&QRV	&JO97FO\\
 	Repeater          & FM           & SK3RIN        & Borgsjö          &          434.7000 &        -1,6MHz & 1750Hz          &       QRT       &  \\
 	Hotspot           & D-Star       & SG3IVF-B      & Enafors          &          434.5500 &                & DV Carrier      &       QRV       & JP63EG           \\
 	Repeater          & D-Star       & SK3GY-B       & Gävle            &          434.9250 &          -2MHz & DV Carrier      &       QRV       & JP80JO           \\
-\textbf{Funktion} & \textbf{Typ} & \textbf{Call} & \textbf{QTH}     & \textbf{Frekvens} & \textbf{Skift} & \textbf{Access} & \textbf{Status} & \textbf{Locator} \\ \hline
 	Repeater          & FM           & SK3GW/R       & Gävle            &          434.8750 &          -2MHz & 1750/127,3Hz    &       QRV       & JP80NP           \\
-		
 	Hotspot           & D-Star       & SG3CFY-B      & Gävle            &          433.4750 &                & DV Carrier      &       QRV       & JP80NQ           \\
 	Repeater          & FM           & SK3YZ/R       & Hassela/Forsa    &          145.6750 &        -600KHz & 1750/74,4Hz     &       QRV       & JP82IC           \\
 	Repeater          & FM           & SK3RQE        & Hassela/Forsa    &          434.6750 &          -2MHz & 1750/127,3Hz    &       QRV       & JO81KS           \\
@@ -543,7 +545,6 @@ Repeater&	FM/C4FM&	SK1BL/R	&Endre	&145.7750	&-600kHz	&1750	&QRV	&JO97FO\\
 	Hotspot           & D-Star       & SE3XCH-C      & S-vall/Nolbyk.   &          144.8625 &                & DV Carrier      &       QRV       & JP82QH           \\
 	Repeater          & FM           & SK3RYK        & Söderhamn        &          145.7500 &        -600KHz & 1750Hz          &       QRV       & JP81NH           \\
 	Repeater          & FM           & SK3RYK        & Söderhamn        &          434.7500 &        -1,6MHz & 1750Hz          &       QRV       & JP81NH           \\
-	\textbf{Funktion} & \textbf{Typ} & \textbf{Call} & \textbf{QTH}     & \textbf{Frekvens} & \textbf{Skift} & \textbf{Access} & \textbf{Status} & \textbf{Locator} \\ \hline
 	Repeater          & D-Star       & SK3XX-C       & Söderhamn        &          145.5750 &        -600KHz & DV Carrier      &       QRV       & JP81NH           \\
 	Repeater          & D-Star       & SK3XX-A       & Söderhamn        &         1297.0750 &          -6MHz & DV Carrier      &       QRV       & JP81NH           \\
 	Repeater          & D-Star       & SK3XX-B       & Söderhamn        &          434.5250 &          -2MHz & DV Carrier      &       QRV       & JP81NH           \\
@@ -568,6 +569,7 @@ Repeater&	FM/C4FM&	SK1BL/R	&Endre	&145.7750	&-600kHz	&1750	&QRV	&JO97FO\\
 \footnotesize
 \begin{longtable}{llllrrlcl}
 	\textbf{Funktion} & \textbf{Typ} & \textbf{Call} & \textbf{QTH}        & \textbf{Frekvens} & \textbf{Skift} & \textbf{Access} & \textbf{Status} & \textbf{Locator} \\ \hline
+	\endhead
 	Repeater          & FM           & SK4RWQ        & Arvika/Valfj.       &          434.7750 &          -2MHz & 1750            &       QRV       & JO69ES           \\
 	Repeater          & FM           & SK4UH/R       & Avesta              &          434.8500 &          -2MHz & 1750            &       QRV       & JP80CD           \\
 	Repeater          & FM           & SK4RVN        & Borlänge            &          434.8000 &          -2MHz & 74,4Hz          &       QRV       & JP70RL           \\
@@ -578,7 +580,6 @@ Repeater&	FM/C4FM&	SK1BL/R	&Endre	&145.7750	&-600kHz	&1750	&QRV	&JO97FO\\
 	Repeater          & FM           & SK4AO/R       & Falun               &          145.6250 &        -600kHz & 1750            &       QRV       &  \\
 	Repeater          & FM           & SK4AO/R       & Falun               &          434.6250 &          -2MHz & 1750            &       QRV       & JP70TO           \\
 	Link              & FM           & SK4AV/R       & Filipstad/Klockarh. &          145.2000 &                & Carrier         &       QRV       & JO79CR           \\
-	\textbf{Funktion} & \textbf{Typ} & \textbf{Call} & \textbf{QTH}        & \textbf{Frekvens} & \textbf{Skift} & \textbf{Access} & \textbf{Status} & \textbf{Locator} \\ \hline
 	Repeater          & FM           & SM4EFQ        & Filipstad/Storh.    &          145.7000 &        -600kHz & 1750            &       QRV       & JO79CR           \\
 	Hotspot           & D-Star       & SG4UOF-C      & Glanshammar         &          145.3375 &                & DV Carrier      &       QRV       & JO79RI           \\
 	Repeater          & FM           & SK4IL/R       & Grums               &          434.7250 &          -2MHz & 74,4Hz          &       QRV       & JO69NI           \\
@@ -613,7 +614,6 @@ Repeater&	FM/C4FM&	SK1BL/R	&Endre	&145.7750	&-600kHz	&1750	&QRV	&JO97FO\\
 	Repeater          & FM           & SK4WV/R       & Vansbro             &          145.6500 &        -600kHz & 1750 Hz         &       QRV       & JP70AM           \\
 	Repeater          & FM           & SK4WV/R       & Vansbro             &          434.6500 &        -1,6MHz & 1750            &       QRT       & JP70AM           \\
 	Repeater          & FM           & SK4RQF        & Årjäng              &          145.7250 &        -600kHz & 1750            &       QRV       & JO69BJ           \\
-	\textbf{Funktion} & \textbf{Typ} & \textbf{Call} & \textbf{QTH}        & \textbf{Frekvens} & \textbf{Skift} & \textbf{Access} & \textbf{Status} & \textbf{Locator} \\ \hline
 	Repeater          & FM           & SK4BX/R       & Örebro              &          145.6500 &        -600kHz & 1750            &       QRV       & JO79OG
 \end{longtable}
 \begin{itemize}
@@ -622,6 +622,7 @@ Repeater&	FM/C4FM&	SK1BL/R	&Endre	&145.7750	&-600kHz	&1750	&QRV	&JO97FO\\
 \subsection{Repeatrar distrikt 5}
 \begin{longtable}{llllrrlcl}
 	\textbf{Funktion} & \textbf{Typ} & \textbf{Call} & \textbf{QTH}      & \textbf{Frekvens} & \textbf{Skift} & \textbf{Access} & \textbf{Status} & \textbf{Locator} \\ \hline
+	\endhead
 	Repeater          & FM           & SK5RTG        & Arboga/Kolsva     &          145.7375 &        -600KHz & Carrier         &       QRV       & JP79WO           \\
 	Repeater          & FM           & SK5RTG        & Arboga/Kolsva     &          434.9000 &          -2MHz & Carrier         &       QRV       & JP79WO           \\
 	Repeater          & FM           & SK5WB/R       & Enköping          &          434.9500 &          -2MHz & 156,7Hz         &       QRV       & JO89NP           \\
@@ -647,7 +648,6 @@ Repeater&	FM/C4FM&	SK1BL/R	&Endre	&145.7750	&-600kHz	&1750	&QRV	&JO97FO\\
 	Repeater          & FM           & SK5AS/R       & Linköping         &          145.7250 &        -600KHz & 1750            &       QRV       & JO78TJ           \\
 	Repeater          & FM           & SM5YMS/R      & Linköping         &          434.8000 &          -2MHz & 1750            &       QRV       & JO78SM           \\
 	Repeater          & FM           & SM5YMS/R      & Linköping         &           51.8300 &        -600KHz & 1750            &       QRV       & JO78SM           \\
-		\textbf{Funktion} & \textbf{Typ} & \textbf{Call} & \textbf{QTH}        & \textbf{Frekvens} & \textbf{Skift} & \textbf{Access} & \textbf{Status} & \textbf{Locator} \\ \hline
 	Repeater          & FM           & SM5DWC/R      & Linköping         &          434.8750 &          -2MHz & 82,5Hz          &       QRV       & JO78SM           \\
 	Repeater          & FM           & SM5DWC/R      & Linköping         &           51.8900 &        -600KHz & 82,5Hz          &       QRT       & JO78SM           \\
 	Repeater          & FM           & SK5LF/R       & L-köping/Majelden &          434.7250 &          -2MHz & 82,5Hz          &       QRV       & JO78TJ           \\
@@ -678,12 +678,12 @@ Repeater&	FM/C4FM&	SK1BL/R	&Endre	&145.7750	&-600kHz	&1750	&QRV	&JO97FO\\
 \footnotesize
 \begin{longtable}{llllrrlcl}
 	\textbf{Funktion} & \textbf{Typ} & \textbf{Call} & \textbf{QTH}        & \textbf{Frekvens} & \textbf{Skift} & \textbf{Access} & \textbf{Status} & \textbf{Locator} \\ \hline
+	\endhead
 	Repeater          & FM           & SK6RIC        & Alingsås            &          145.6250 &        -600KHz & 1750/114,8Hz    &       QRV       & JO67GW           \\
 	Repeater          & FM           & SK6RIC        & Alingsås            &          434.6250 &          -2MHz & 1750/114,8Hz    &       QRV       & JO67GW           \\
 	Repeater          & FM           & SA6AR/R       & Angered             &          434.9250 &          -2MHz & 1750Hz          &       QRV       & JO67AT           \\
 	Repeater          & FM           & SK6RFP        & Billingsfors        &          145.7000 &        -600KHz & 118,8Hz         &       QRV       & JO69CA           \\
 	Repeater          & FM           & SL6ZYW/R      & Billingsfors        &          434.7000 &          -2MHz & 1750Hz          &       QRV       & JO69CA           \\
-		\textbf{Funktion} & \textbf{Typ} & \textbf{Call} & \textbf{QTH}        & \textbf{Frekvens} & \textbf{Skift} & \textbf{Access} & \textbf{Status} & \textbf{Locator} \\ \hline
 	Repeater          & FM           & SA6RP/R       & Björboholm          &          434.8250 &          -2MHz & 118,8Hz         &       QRV       & JO67DV           \\
 	Repeater          & FM           & SK6LK/R       & Borås               &          145.7750 &        -600KHz & 1750/114,8Hz    &       QRV       & JO67MR           \\
 	Repeater          & FM           & SK6RBS        & Borås               &          434.8000 &          -2Mhz & 1750Hz          &       QRV       & JO67MR           \\
@@ -718,7 +718,6 @@ Repeater&	FM/C4FM&	SK1BL/R	&Endre	&145.7750	&-600kHz	&1750	&QRV	&JO97FO\\
 	Link              & FM           & SM6FZG        & Göteb./Skårsjön     &          144.5500 &        Simplex & 146,2Hz         &       QRV       & JO67AN           \\
 	Link              & FM           & SM6FZG        & Göteb./Skårsjön     &           51.5500 &        Simplex & 146,2Hz         &       QRV       & JO67AN           \\
 	Link              & FM           & SM6FZG        & Göteb./Skårsjön     &           29.5500 &        Simplex & 146,2Hz         &       QRV       & JO67AN           \\
-		\textbf{Funktion} & \textbf{Typ} & \textbf{Call} & \textbf{QTH}        & \textbf{Frekvens} & \textbf{Skift} & \textbf{Access} & \textbf{Status} & \textbf{Locator} \\ \hline
 	Repeater          & FM           & SM6YOF/R      & Göteb./Torslanda    &          434.9500 &          -2MHz & Carrier         &       QRV       & JO57VS           \\
 	Link              & FM           & SM6FZG        & Göteb./V. Frölunda  &          144.5375 &        Simplex & 146,2 Hz        &       QRV       & JO57XP           \\
 	Link              & FM           & SM6CYJ        & Götene              &          145.3250 &                & 71,9 Hz         &       QRV       & JO68RM           \\
@@ -753,7 +752,6 @@ Repeater&	FM/C4FM&	SK1BL/R	&Endre	&145.7750	&-600kHz	&1750	&QRV	&JO97FO\\
 	Repeater          & FM           & SM6VBT/R      & Mölndal             &          434.7000 &          -2MHz & 118,8Hz         &       QRV       & JO67AP           \\
 	Repeater          & FM           & SM6VBT/R      & Mölndal             &           29.6900 &        -100KHz & 118,8Hz         &       QRV       & JO67AP           \\
 	Hotspot           & D-Star       & SD6GB-B       & Mölndal             &          434.4625 &                & DV Carrier      &       QRV       & JO67AQ           \\
-		\textbf{Funktion} & \textbf{Typ} & \textbf{Call} & \textbf{QTH}        & \textbf{Frekvens} & \textbf{Skift} & \textbf{Access} & \textbf{Status} & \textbf{Locator} \\ \hline
 	Hotspot           & D-Star       & SD6GB-E       & Mölndal             &           51.5300 &                & DV Carrier      &       QRV       & JO67AQ           \\
 	Hotspot           & D-Star       & SG6ZDO        & Sjövik              &          433.5750 &                & DV Carrier      &       QRV       & JO67EV           \\
 	Repeater          & D-Star       & SG6APY-B      & Skara               &          434.5875 &          -2MHz & DV Carrier      &       QRV       & JO68RJ           \\
@@ -786,10 +784,10 @@ Repeater&	FM/C4FM&	SK1BL/R	&Endre	&145.7750	&-600kHz	&1750	&QRV	&JO97FO\\
 \footnotesize
 \begin{longtable}{llllrrlcl}
 	\textbf{Funktion} & \textbf{Typ} & \textbf{Call} & \textbf{QTH}        & \textbf{Frekvens} & \textbf{Skift} & \textbf{Access} & \textbf{Status} & \textbf{Locator} \\ \hline
+\endhead
 	Repeater          & FM           & SK7CA/R       & Algutsrum           &          145.6000 &        -600KHz & 1750/79,7Hz     &       QRV       & JO86GQ           \\
 	Repeater          & FM           & SK7CA/R       & Algutsrum           &          434.6000 &          -2MHz & 79,7Hz          &       QRV       & JO86GQ           \\
 	Repeater          & FM           & SM7NTJ/R      & Aneby               &          434.7250 &          -2MHz & 1750Hz          &       QRV       & JO77HU           \\
-		\textbf{Funktion} & \textbf{Typ} & \textbf{Call} & \textbf{QTH}        & \textbf{Frekvens} & \textbf{Skift} & \textbf{Access} & \textbf{Status} & \textbf{Locator} \\ \hline
 	Repeater          & FM           & SK7REZ        & Blentarp/Romeleås.  &          145.6750 &        -600KHz & 79,7Hz          &       QRV       & JO65TM           \\
 	Repeater          & FM           & SK7EM/R       & Blentarp/Romeleås.  &          434.8500 &          -2MHz & 79,7Hz          &       QRV       & JO65SN           \\
 	Repeater          & DMR          & SM7SKI/R      & Blentarp/Romeleås.  &          434.6125 &          -2MHz & DMR             &      Plan       & JO65TM           \\
@@ -824,7 +822,6 @@ Repeater&	FM/C4FM&	SK1BL/R	&Endre	&145.7750	&-600kHz	&1750	&QRV	&JO97FO\\
 	Repeater          & FM           & SM7YWE/R      & Karlskrona          &          434.8750 &          -2MHz & 79,7Hz          &       QRV       & JO76RH           \\
 	Repeater          & FM           & SK7BQ/R       & Kristianstad        &          145.7375 &        -600KHz & 79,7Hz          &       QRV       & JO76AA           \\
 	Repeater          & FM           & SK7BQ/R       & Kristianstad        &          434.6000 &          -2MHz & 1750/79,7Hz     &       QRV       & JO76CA           \\
-		\textbf{Funktion} & \textbf{Typ} & \textbf{Call} & \textbf{QTH}        & \textbf{Frekvens} & \textbf{Skift} & \textbf{Access} & \textbf{Status} & \textbf{Locator} \\ \hline
 	Repeater          & D-Star       & SG7TIX-B      & Kristianstad        &          434.5250 &          -2MHz & DV Carrier      &       QRV       & JO76DB           \\
 	Repeater          & D-Star       & SK7RMQ-C      & Linderöd            &          145.5750 &        -600KHz & DV Carrier      &       QRV       & JO65VW           \\
 	Repeater          & DMR          & SG7DMR        & Linderöd            &          434.5500 &          -2MHz & DMR240700       &       QRV       & JO65VW           \\
@@ -969,6 +966,7 @@ Repeater&	FM/C4FM&	SK1BL/R	&Endre	&145.7750	&-600kHz	&1750	&QRV	&JO97FO\\
 \section{PTS Bandplan för VHF}
 \begin{longtable}{llll}
 	\textbf{Frekvens}                      & \textbf{Duplex}    & \textbf{Användning}                   & \textbf{Anmärkning}            \\ \hline
+	\endhead
 	30.0--37.5                             &                    & Medicinska implantat                  & Undantag f. tillst.pl.         \\
 	                                       &                    &                                       & 2006/771/EG 2013/752/EU        \\
 	30.01--68                              &                    & Militär användning                    &  \\
@@ -996,8 +994,6 @@ Repeater&	FM/C4FM&	SK1BL/R	&Endre	&145.7750	&-600kHz	&1750	&QRV	&JO97FO\\
 	74,8--75,2                             &                    & Radionavigering för luftfart          &  \\
 	74,8--75,2                             &                    & Luftfartsradio (ILS)                  &  \\
 	75,2--75,625                           &                    & Landmobil radio                       &  \\
-	%%% Sidbrytning %%%
-	\textbf{Frekvens} & \textbf{Duplex}    & \textbf{Användning}                   & \textbf{Anmärkning}            \\ \hline
 	75,2--75,625                           &                    & PMR                                   &  \\
 	75,625--77,475                         & 80.625--82.475     & Landmobil radio                       &  \\
 	75,625--77,475                         & 80.625--82.475     & PMR                                   &  \\
@@ -1028,8 +1024,6 @@ Repeater&	FM/C4FM&	SK1BL/R	&Endre	&145.7750	&-600kHz	&1750	&QRV	&JO97FO\\
 	146--149,9                             &                    & Militär användning                    &  \\
 	146,05--147                            & 150.05--151        & Landmobil radio                       &  \\
 	146,05--147                            & 150.05--151        & PMR                                   &  \\
-	%%% Sidbrytning %%%
-	\textbf{Frekvens} & \textbf{Duplex}    & \textbf{Användning}                   & \textbf{Anmärkning}            \\ \hline
 	147--149,9                             &                    & Landmobil radio                       &  \\
 	148--150,05                            &                    & Jordstationer (mobila satellitsystem) & MSS upplänk                    \\
 	                                       &                    &                                       & Undantag från tillst.pl.       \\
@@ -1060,8 +1054,6 @@ Repeater&	FM/C4FM&	SK1BL/R	&Endre	&145.7750	&-600kHz	&1750	&QRV	&JO97FO\\
 	158,075--160,625                       & 166.075--168.625   & Landmobil radio                       &  \\
 	158,075--160,625                       & 166.075--168.625   & PMR                                   &  \\
 	158,075--160,6125                      & 166.075--168.6125  & PMR                                   &  \\
-	%%% Sidbrytning %%%
-	\textbf{Frekvens} & \textbf{Duplex}    & \textbf{Användning}                   & \textbf{Anmärkning}            \\ \hline
 	160,6125--160,9625                     & 156.0125--156.3625 & Sjöfartsradio                         & RR AP18                        \\
 	160,6125--162,0375                     &                    & Landmobil radio                       &  \\
 	160,6125--162,0375                     &                    & PMR                                   &  \\
@@ -1092,8 +1084,6 @@ Repeater&	FM/C4FM&	SK1BL/R	&Endre	&145.7750	&-600kHz	&1750	&QRV	&JO97FO\\
 	                                       &                    &                                       & 2006/771/EG 2013/752/EU        \\
 	170,025--171                           & 162.025--163       & Landmobil radio                       &  \\
 	170,025--171                           & 162.025--163       & PMR                                   &  \\
-	%%% Sidbrytning %%%
-	\textbf{Frekvens} & \textbf{Duplex}    & \textbf{Användning}                   & \textbf{Anmärkning}            \\ \hline
 	171--172                               & 163--164           & Militär användning                    &  \\
 	172--174                               & 164--166           & Landmobil radio                       &  \\
 	172--174                               & 164--166           & PMR                                   &  \\
@@ -1112,6 +1102,7 @@ Repeater&	FM/C4FM&	SK1BL/R	&Endre	&145.7750	&-600kHz	&1750	&QRV	&JO97FO\\
 \section{PTS bandplan för UHF}
 \begin{longtable}{llll}
 	\textbf{Frekvens}  & \textbf{Duplex}    & \textbf{Användning}     & \textbf{Anmärkning}                      \\ \hline
+	\endhead
 	328,6--335,4       &                    & Radionavigering         & För luftfart                             \\
 	328,6--335,4       &                    & Luftfartsradio (ILS)    &  \\
 	335,4--386         &                    & Militär användning      &  \\
@@ -1137,7 +1128,6 @@ Repeater&	FM/C4FM&	SK1BL/R	&Endre	&145.7750	&-600kHz	&1750	&QRV	&JO97FO\\
 	401--406           &                    & Medicinska implantat    & Undantag från tillståndsplikt            \\
 	402--403           &                    & Meteorologi             & Via satellit                             \\
 	404--406           &                    & Landmobil radio         &  \\
-	\textbf{Frekvens}  & \textbf{Duplex}    & \textbf{Användning}     & \textbf{Anmärkning}                      \\ \hline
 	406--406,1         &                    & Sjöfartsradio (EPIRB)   & Undantag från tillståndsplikt            \\
 	                   &                    &                         & (COSPAS-SARSAT)                          \\
 	406--406,1         &                    & PLB                     & Undantag från tillståndsplikt            \\
@@ -1165,7 +1155,6 @@ Repeater&	FM/C4FM&	SK1BL/R	&Endre	&145.7750	&-600kHz	&1750	&QRV	&JO97FO\\
 	444--444,5875      &                    & Landmobil radio         &  \\
 	444--444,5875      &                    & Telemetri och radiost.  &  \\
 	444,5875--444,9875 &                    & Landmobil radio         & Undantag från tillståndsplikt            \\
-	\textbf{Frekvens}  & \textbf{Duplex}    & \textbf{Användning}     & \textbf{Anmärkning}                      \\ \hline
 	444,5875--448      &                    & Landmobil radio         &  \\
 	444,5875--448      &                    & PMR                     &  \\
 	446--446,1         &                    & PMR 446                 & Undantag från tillståndsplikt            \\
@@ -1193,7 +1182,6 @@ Repeater&	FM/C4FM&	SK1BL/R	&Endre	&145.7750	&-600kHz	&1750	&QRV	&JO97FO\\
 	863--865           &                    & Allmän kortdistansradio & Undantag från tillståndsplikt            \\
 	863--865           &                    & Ljudöverföring          & Undantag från tillståndsplikt            \\
 	865--868           &                    & RFID                    & Undantag från tillståndsplikt            \\
-	\textbf{Frekvens}  & \textbf{Duplex}    & \textbf{Användning}     & \textbf{Anmärkning}                      \\ \hline
 	865--868           &                    & Allmän kortdist.radio   & Undantag från tillståndsplikt            \\
 	868--870           &                    & Allmän kortdist.radio   & Undantag från tillståndsplikt            \\
 	868,6--869,7       &                    & Larmöverföring          & Undantag från tillståndsplikt            \\
@@ -1221,7 +1209,6 @@ Repeater&	FM/C4FM&	SK1BL/R	&Endre	&145.7750	&-600kHz	&1750	&QRV	&JO97FO\\
 	1215--1237         &                    & Satellitnavigering      & GPS                                      \\
 	1237--1260         &                    & Satellitnavigering      & GLONASS                                  \\
 	1240--1300         &                    & Amatörradio             & Undantag från tillståndsplikt            \\
-	\textbf{Frekvens}  & \textbf{Duplex}    & \textbf{Användning}     & \textbf{Anmärkning}                      \\ \hline
 	1260--1300         &                    & Satellitnavigering      & GALILEO                                  \\
 	1300--1375         &                    & Militär användning      &  \\
 	1330--1427         &                    & Radioastronomi          & Onsala rymd - observatorium              \\
@@ -1249,7 +1236,6 @@ Repeater&	FM/C4FM&	SK1BL/R	&Endre	&145.7750	&-600kHz	&1750	&QRV	&JO97FO\\
 	                   &                    &                         & Undantag från tillståndsplikt            \\
 	1645,5--1646,5     &                    & Sjöfartsradio           & Nöd- och säkerhetstrafik                 \\
 	                   &                    &                         &  \\
-	\textbf{Frekvens}  & \textbf{Duplex}    & \textbf{Användning}     & \textbf{Anmärkning}                      \\ \hline
 	1646,5--1660,5     &                    & Satellit                & Jordstationer (mobila sat.system)        \\
 	                   &                    &                         & MSS upplänk                              \\
 	                   &                    &                         & Undantag från tillståndsplikt            \\
@@ -1277,7 +1263,6 @@ Repeater&	FM/C4FM&	SK1BL/R	&Endre	&145.7750	&-600kHz	&1750	&QRV	&JO97FO\\
 	2200--2300         &                    & Militär användning      &  \\
 	2200--2290         &                    & Rymdfarkostkontroll     & Nedlänk Satellit-satellit                \\
 	2300--2400         &                    & MFCN                    & ECC/DEC/(14)02                           \\
-	\textbf{Frekvens}  & \textbf{Duplex}    & \textbf{Användning}     & \textbf{Anmärkning}                      \\ \hline
 	2400--2483,5       &                    & Militär användning      &  \\
 	2400--2450         &                    & Amatörradio             & Undantag från tillståndsplikt            \\
 	                   &                    &                         & Max 100 mW                               \\
