Sans serif för pad-versionen, korrigeringar

--- a/rhb-pad.tex
+++ b/rhb-pad.tex
@@ -10,5 +10,8 @@
 \usepackage{pdflscape}
 \usepackage{longtable}
 \usepackage{textcomp}
+\renewcommand{\familydefault}{\sfdefault}
+%\usepackage{helvet} 
+%\usepackage{avant}
 
 \input{body}
